[gd_scene load_steps=23 format=3 uid="uid://lbgr2h3khkdf"]

[ext_resource type="Script" uid="uid://dialqv0aksc8t" path="res://Scripts/oracle.gd" id="1_hptm8"]
[ext_resource type="PackedScene" uid="uid://dorbrraaxek6e" path="res://Scenes/background.tscn" id="2_d1ilt"]
[ext_resource type="Shader" uid="uid://bc32ylu86x4j2" path="res://Scripts/ball.gdshader" id="3_6iyac"]
[ext_resource type="Texture2D" uid="uid://cygo7jhmf4gtr" path="res://Art/balls.png" id="4_fdnlq"]
[ext_resource type="Script" uid="uid://cxwndyqfwx1go" path="res://Scripts/cat.gd" id="5_jkdf5"]
[ext_resource type="Texture2D" uid="uid://cj4buq4l8i0c2" path="res://Art/WitchFlying.png" id="6_wsu2k"]
[ext_resource type="Texture2D" uid="uid://bxnlffjbwkaoc" path="res://Art/Tables and Stuff - No Shadows.png" id="7_k12tt"]
[ext_resource type="Texture2D" uid="uid://cn13a0puys65w" path="res://Background/cloud.png" id="8_h1bgf"]
[ext_resource type="Theme" uid="uid://bkjssddtmxqfc" path="res://Art/theme_button.tres" id="9_b3802"]
[ext_resource type="FontFile" uid="uid://0lupg4qqthx0" path="res://Art/BoldPixels1.4.ttf" id="10_fevyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7mycd"]
shader = ExtResource("3_6iyac")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 1.3

[sub_resource type="Animation" id="Animation_272bh"]
resource_name = "Ball"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallMainNode/Balls:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 0, 4, 1, 5, 8, 9, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BallMainNode/Balls:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BallMainNode/BallPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.6]
}

[sub_resource type="Animation" id="Animation_hptm8"]
resource_name = "Ball_Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallMainNode/Balls:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 0), Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BallMainNode/BallPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BallMainNode/Balls:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_5vw27"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BallMainNode/Balls:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BallMainNode/Balls:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BallMainNode/BallPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kek77"]
_data = {
&"Ball": SubResource("Animation_272bh"),
&"Ball_Idle": SubResource("Animation_hptm8"),
&"RESET": SubResource("Animation_5vw27")
}

[sub_resource type="Animation" id="Animation_lquwl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMainNode/Cat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CatMainNode/Cat:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CatMainNode/CatPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_1bvp3"]
resource_name = "Speaking"
length = 0.53
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMainNode/Cat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CatMainNode/CatPlayer:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CatMainNode/Cat:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "Spin"
length = 0.5333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("CatMainNode/Cat:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CatMainNode/Cat:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5332),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CatMainNode/CatPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_272bh"]
_data = {
&"RESET": SubResource("Animation_lquwl"),
&"Speaking": SubResource("Animation_1bvp3"),
&"Spin": SubResource("Animation_7mycd")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272bh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5vw27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kek77"]

[node name="Main" type="Node2D"]
script = ExtResource("1_hptm8")

[node name="Background" parent="." instance=ExtResource("2_d1ilt")]
z_index = -1

[node name="BallMainNode" type="Node2D" parent="."]
position = Vector2(579, 277)
metadata/_edit_group_ = true

[node name="Balls" type="Sprite2D" parent="BallMainNode"]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_7mycd")
scale = Vector2(3, 2.4)
texture = ExtResource("4_fdnlq")
hframes = 4
vframes = 3
frame = 8
region_enabled = true
region_rect = Rect2(0, 128, 256, 192)

[node name="BallPlayer" type="AnimationPlayer" parent="BallMainNode"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_kek77")
}
speed_scale = 0.6

[node name="CatMainNode" type="Node2D" parent="."]
position = Vector2(741, 170)
script = ExtResource("5_jkdf5")

[node name="Cat" type="Sprite2D" parent="CatMainNode"]
z_index = 2
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("6_wsu2k")
hframes = 6
region_enabled = true
region_rect = Rect2(0, 0, 283, 64)

[node name="CatPlayer" type="AnimationPlayer" parent="CatMainNode"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_272bh")
}

[node name="Table" type="Sprite2D" parent="."]
modulate = Color(0.54099, 0.54099, 0.54099, 1)
texture_filter = 1
position = Vector2(578, 341)
scale = Vector2(7, 6.511)
texture = ExtResource("7_k12tt")
region_enabled = true
region_rect = Rect2(0, 0, 32, 25)

[node name="Cloud" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 6
position = Vector2(576, 300)
scale = Vector2(2, 2)
texture = ExtResource("8_h1bgf")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="UI"]
modulate = Color(1, 0.652271, 0.0360888, 1)
texture_filter = 1
layout_mode = 0
offset_left = 51.0
offset_top = 437.0
offset_right = 1092.0
offset_bottom = 629.0
theme = ExtResource("9_b3802")

[node name="TextEdit" type="TextEdit" parent="UI"]
layout_mode = 0
offset_left = 155.0
offset_top = 454.0
offset_right = 987.0
offset_bottom = 578.0
theme = ExtResource("9_b3802")
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_fevyy")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxEmpty_272bh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5vw27")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_kek77")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="Node2D" type="Node2D" parent="."]

[connection signal="animation_started" from="CatMainNode/CatPlayer" to="CatMainNode" method="_on_cat_player_animation_started"]
[connection signal="text_changed" from="UI/TextEdit" to="." method="_on_text_edit_text_changed"]
